--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -18,6 +18,8 @@ $white: #fff;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
+$oswald: 'Oswald', sans-serif;
+$openSans: 'Open Sans', sans-serif;
 
 // Mobile breakpoints
 @mixin mobile {
