--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $white;
+  background: $white;
   font: 18px $openSans;
   font-style: normal;
   color: $darkGray;
@@ -34,7 +34,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $oswald;
   color: $darkerGray;
-  //font-weight: bold;
+  font-weight: normal;
 
   line-height: 1.7;
   margin: 1em 0 15px;
